objects/Sample_Request__c.object
<CustomObject>
    <description>Used by IND for sample requests for Cable Assemblies</description>
    <fields>
        <fullName>Approval_Lead_Time__c</fullName>
        <description>lead time calculation for approval. From submission to either approved or rejected</description>
        <formula>IF(
ISBLANK(Sample_Request_Appr_Rej_Date__c),-1,


CASE(MOD(  Sample_Request_Submitted_Date__c  - DATE(1985,6,24),7),
0 , CASE( MOD( Sample_Request_Appr_Rej_Date__c -Sample_Request_Submitted_Date__c ,7),1,1,2,2,3,3,4,4,5,4,6,4,0),
1 , CASE( MOD( Sample_Request_Appr_Rej_Date__c - Sample_Request_Submitted_Date__c ,7),1,1,2,2,3,3,4,3,5,3,6,4,0),
2 , CASE( MOD( Sample_Request_Appr_Rej_Date__c - Sample_Request_Submitted_Date__c ,7),1,1,2,2,3,2,4,2,5,3,6,4,0),
3 , CASE( MOD( Sample_Request_Appr_Rej_Date__c - Sample_Request_Submitted_Date__c ,7),1,1,2,1,3,1,4,2,5,3,6,4,0),
4 , CASE( MOD( Sample_Request_Appr_Rej_Date__c - Sample_Request_Submitted_Date__c ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
5 , CASE( MOD( Sample_Request_Appr_Rej_Date__c - Sample_Request_Submitted_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Sample_Request_Appr_Rej_Date__c - Sample_Request_Submitted_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR((  Sample_Request_Appr_Rej_Date__c  - Sample_Request_Submitted_Date__c )/7)*5)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Can_alternative_components_available_in__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Could we use alternative components available in the sample shop?</inlineHelpText>
        <label>Alternative components can be used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_alternative_wire_cable_available_in__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Could we use alternative wire/cable availble in the sample shop?</inlineHelpText>
        <label>Alternative wire/cable can be used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_may_be_contacted_directly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the customer may be contacted directly or wants to be contacted by Sales only</inlineHelpText>
        <label>Customer may be contacted directly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_due_back_to_TE__c</fullName>
        <label>Date due back to TE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_received_back__c</fullName>
        <label>Date received back</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Sample_Request_Created__c</fullName>
        <formula>IF(

NOT(ISBLANK( CreatedDate )),



CASE(MOD( Datevalue(CreatedDate)  - DATE(1985,6,24),7),
0 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,1,2,2,3,3,4,4,5,4,6,4,0),
1 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,1,2,2,3,3,4,3,5,3,6,4,0),
2 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,1,2,2,3,2,4,2,5,3,6,4,0),
3 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,1,2,1,3,1,4,2,5,3,6,4,0),
4 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,0,2,0,3,1,4,2,5,3,6,4,0),
5 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( TODAY() - Datevalue(CreatedDate))/7)*5),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Sample Request Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engineering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineering</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intercontec_Inside_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>contains the IC inside sales team user from the Opp Team</description>
        <label>Intercontec Inside Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intercontec_Sample_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox is set automatically if the samples are for Intercontec products</inlineHelpText>
        <label>Intercontec Sample Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_sample_for_show_and_tell_not_fun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-functional sample (show and tell)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_sample_needed_for_validation_fun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Functional sample (for validation)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Late_Indicator__c</fullName>
        <formula>IF(
OR(
 ISBLANK(Lead_Time_Number_Field__c),
 ISBLANK(Service_Level_Agreement__c)
) ,&apos;&apos;,
IF(
OR(
AND(
  Service_Level_Agreement__c  = &apos;1&apos;,
 Lead_Time_Number_Field__c &lt;=3
),
AND(
 Service_Level_Agreement__c = &apos;2&apos;,
 Lead_Time_Number_Field__c &lt;=6
),
AND(
 Service_Level_Agreement__c = &apos;3&apos;,
 Lead_Time_Number_Field__c &lt;=9
),
AND(
 Service_Level_Agreement__c = &apos;4&apos;,
 Lead_Time_Number_Field__c &lt;=12
)
),
&apos;On Time&apos;,&apos;Late&apos;
)
)</formula>
        <inlineHelpText>Displays &apos;Late&apos; or &apos;OnTime&apos;, depending on the lead time in relation to the service level agreement.</inlineHelpText>
        <label>Late Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time_Number_Field__c</fullName>
        <description>needed to create a single number field to write the lead time into, otherwise the formula for late_indicator would not compile</description>
        <label>Lead Time Number Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <formula>CASE(MOD(  DATEVALUE( CreatedDate )  - DATE(1985,6,24),7),
0 , CASE( MOD(  Samples_Built_Date__c  -DATEVALUE( CreatedDate ) ,7),1,1,2,2,3,3,4,4,5,4,6,4,0),
1 , CASE( MOD( Samples_Built_Date__c - DATEVALUE( CreatedDate ) ,7),1,1,2,2,3,3,4,3,5,3,6,4,0),
2 , CASE( MOD( Samples_Built_Date__c - DATEVALUE( CreatedDate ) ,7),1,1,2,2,3,2,4,2,5,3,6,4,0),
3 , CASE( MOD( Samples_Built_Date__c - DATEVALUE( CreatedDate ) ,7),1,1,2,1,3,1,4,2,5,3,6,4,0),
4 , CASE( MOD( Samples_Built_Date__c - DATEVALUE( CreatedDate ) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
5 , CASE( MOD( Samples_Built_Date__c - DATEVALUE( CreatedDate ) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Samples_Built_Date__c - DATEVALUE( CreatedDate ) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Samples_Built_Date__c - DATEVALUE( CreatedDate ) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The opportunity for which the sample requests are ordered</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchasing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchasing</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Please enter the quantity of the samples ordered</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_PM_AP_2__c</fullName>
        <formula>Opportunity__r.Regional_PM_AP__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Regional_PM_AP__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional PM AP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_AP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional PM AP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_PM_EMEA_2__c</fullName>
        <formula>Opportunity__r.Regional_PM_EMEA__r.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.Regional_PM_EMEA__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional PM EMEA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the regional PM for the opportunity part. Used for automatic approver in the sample request approval process</description>
        <label>Regional PM EMEA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_PM_India_2__c</fullName>
        <formula>Opportunity__r.Regional_PM_India__r.FirstName &amp;&quot; &quot;&amp;Opportunity__r.Regional_PM_India__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional PM India</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_India__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional PM India</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_PM_Japan_2__c</fullName>
        <formula>Opportunity__r.Regional_PM_Japan__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Regional_PM_Japan__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional PM Japan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_Japan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional PM Japan</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_PM_US_2__c</fullName>
        <formula>Opportunity__r.Regional_PM_US__r.FirstName &amp;&quot; &quot;&amp; Opportunity__r.Regional_PM_US__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional PM US</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_US__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional PM US</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks_to_the_above_Checklist__c</fullName>
        <label>Remarks to the Checklist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <inlineHelpText>Please enter the date when you want to have the samples delivered</inlineHelpText>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sample_Location__c</fullName>
        <formula>TEXT( Opportunity__r.CCAO_Sample_Location__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Appr_Rej_Date__c</fullName>
        <description>Date when sample request was approved or rejected</description>
        <label>Sample Request Appr/Rej Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Submitted_Date__c</fullName>
        <description>Date when the sample request was submitted for approval</description>
        <label>Sample Request Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Samples_Built_Date__c</fullName>
        <description>Records the date when samples have been built, filled by WF</description>
        <label>Samples Built Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Samples_Built__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box when the requested samples are built, Salesforce will record the date.</inlineHelpText>
        <label>Samples Built</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Samples_Built_vs_Request_Date__c</fullName>
        <formula>IF( Samples_Built_Date__c - Requested_Delivery_Date__c &gt;= 0,

CASE(MOD( Requested_Delivery_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( Samples_Built_Date__c - Requested_Delivery_Date__c ,7),1,-1,2,-2,3,-3,4,-4,5,-4,6,-4,0),
1 , CASE( MOD( Samples_Built_Date__c - Requested_Delivery_Date__c ,7),1,-1,2,-2,3,-3,4,-3,5,-3,6,-4,0),
2 , CASE( MOD( Samples_Built_Date__c - Requested_Delivery_Date__c ,7),1,-1,2,-2,3,-2,4,-2,5,-3,6,-4,0),
3 , CASE( MOD( Samples_Built_Date__c - Requested_Delivery_Date__c ,7),1,-1,2,-1,3,-1,4,-2,5,-3,6,-4,0),
4 , CASE( MOD( Samples_Built_Date__c - Requested_Delivery_Date__c ,7),1,0,2,0,3,-1,4,-2,5,-3,6,-4,0),
5 , CASE( MOD( Samples_Built_Date__c - Requested_Delivery_Date__c ,7),1,0,2,-1,3,-2,4,-3,5,-4,6,-5,0),
6 , CASE( MOD( Samples_Built_Date__c - Requested_Delivery_Date__c ,7),1,-1,2,-2,3,-3,4,-4,5,-5,6,-5,0),
999)
+
(FLOOR(( Samples_Built_Date__c - Requested_Delivery_Date__c )/7)*-5),

IF(
AND(
TODAY() - Requested_Delivery_Date__c &gt;= 0,
ISBLANK(Samples_Built_Date__c)),

CASE(MOD( Requested_Delivery_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( TODAY() - Requested_Delivery_Date__c ,7),1,-1,2,-2,3,-3,4,-4,5,-4,6,-4,0),
1 , CASE( MOD( TODAY() - Requested_Delivery_Date__c ,7),1,-1,2,-2,3,-3,4,-3,5,-3,6,-4,0),
2 , CASE( MOD( TODAY() - Requested_Delivery_Date__c ,7),1,-1,2,-2,3,-2,4,-2,5,-3,6,-4,0),
3 , CASE( MOD( TODAY() - Requested_Delivery_Date__c ,7),1,-1,2,-1,3,-1,4,-2,5,-3,6,-4,0),
4 , CASE( MOD( TODAY() - Requested_Delivery_Date__c ,7),1,0,2,0,3,-1,4,-2,5,-3,6,-4,0),
5 , CASE( MOD( TODAY() - Requested_Delivery_Date__c ,7),1,0,2,-1,3,-2,4,-3,5,-4,6,-5,0),
6 , CASE( MOD( TODAY() - Requested_Delivery_Date__c ,7),1,-1,2,-2,3,-3,4,-4,5,-5,6,-5,0),
999)
+
(FLOOR(( TODAY() - Requested_Delivery_Date__c )/7)*-5),


CASE(MOD(Samples_Built_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( Requested_Delivery_Date__c -Samples_Built_Date__c ,7),1,1,2,2,3,3,4,4,5,4,6,4,0),
1 , CASE( MOD( Requested_Delivery_Date__c - Samples_Built_Date__c ,7),1,1,2,2,3,3,4,3,5,3,6,4,0),
2 , CASE( MOD( Requested_Delivery_Date__c - Samples_Built_Date__c ,7),1,1,2,2,3,2,4,2,5,3,6,4,0),
3 , CASE( MOD( Requested_Delivery_Date__c - Samples_Built_Date__c ,7),1,1,2,1,3,1,4,2,5,3,6,4,0),
4 , CASE( MOD( Requested_Delivery_Date__c - Samples_Built_Date__c ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
5 , CASE( MOD( Requested_Delivery_Date__c - Samples_Built_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Requested_Delivery_Date__c - Samples_Built_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Requested_Delivery_Date__c - Samples_Built_Date__c )/7)*5)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Samples Built vs Request Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Date__c</fullName>
        <label>Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Level_Agreement__c</fullName>
        <formula>TEXT(Opportunity__r.CCAO_SLA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Service Level Agreement as defined on the opportunity</inlineHelpText>
        <label>Service Level Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Information__c</fullName>
        <inlineHelpText>Please enter shipping details, like courier service and tracking number</inlineHelpText>
        <label>Shipping Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_address_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping address available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Packaging_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Packaging required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Test_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Test Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_Return_address__c</fullName>
        <label>TE Return address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Documentation_is_needed__c</fullName>
        <label>What Documentation is needed ?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sample Request</label>
    <nameField>
        <label>Sample Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <recordTypes>
        <fullName>AT_Sample_Request</fullName>
        <active>true</active>
        <label>AT Sample Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCAO_Sample_Request</fullName>
        <active>true</active>
        <description>This record type is used for sample requests for CCAO products</description>
        <label>CCAO Sample Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Intercontec_Sample_Request</fullName>
        <active>true</active>
        <description>Applies to Sample Requests for Intercontec Products</description>
        <label>Intercontec Sample Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_received_back_Validation</fullName>
        <active>true</active>
        <description>Ensure Date Received back date not greater than Today&apos;s date</description>
        <errorConditionFormula>AND( OR( ISNEW(), ISCHANGED( Date_received_back__c )  ), Date_received_back__c   &gt;   TODAY(),
OR($Profile.Name = &quot;AT User&quot;,
$Profile.Name = &quot;AT Marketing User&quot;))</errorConditionFormula>
        <errorMessage>Date received back date should not be greater than Today&apos;s date.</errorMessage>
    </validationRules>
</CustomObject>